--- a/src/assets/scss/base/_highlight.scss
+++ b/src/assets/scss/base/_highlight.scss
@@ -29,7 +29,6 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-    overflow: auto;
     padding: 1em;
 }
 
@@ -146,16 +145,14 @@ pre[data-line] {
     border-radius: 10px;
     background: #011627;
     -webkit-overflow-scrolling: touch;
-    overflow: auto;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
-.gatsby-highlight pre[class*="language-"] {
+.gatsby-highlight pre[class*='language-'] {
     float: left;
-    min-width: 100%;
     margin-top: 0;
-    overflow: hidden;
-    padding-top: 2rem;
-    max-width: none;
+    padding-top: 1.5rem;
 }
 
 .gatsby-code-title {
@@ -198,16 +195,18 @@ pre[data-line] {
     width: 6px;
     height: 6px;
 }
+
 .gatsby-highlight::-webkit-scrollbar-thumb {
     background: #687a86;
 }
+
 .gatsby-highlight::-webkit-scrollbar-track {
     background: #faede5;
     border-radius: 0 0 4px 4px;
 }
 
 .line-numbers-rows {
-    padding: 2rem 0.625rem !important;
+    padding: 1.6rem 0.625rem !important;
     border-right: none !important;
 }
 
@@ -217,13 +216,11 @@ pre[class*=language-].line-numbers {
 
 @include breakpoint-xsm {
     .gatsby-code-title,
-    .gatsby-highlight {
+    .gatsby-highlight,
+    .gatsby-highlight::-webkit-scrollbar-track {
         margin-right: -1.3125rem;
         margin-left: -1.3125rem;
+        border-radius: 0;
+        max-width: 40rem;
     }
-    
-    .gatsby-highlight pre[class*='language-']::before {
-        left: 36rem;
-    }
-    
 }
