--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -9,12 +9,17 @@
 
 /* Document
    ========================================================================== */
+@import "../variables";
 
 html {
+	font-size: $typographic-root-font-size;
+	height: 100%;
 	font-family: sans-serif; /* 1 */
 	line-height: 1.15; /* 2 */
 	-ms-text-size-adjust: 100%; /* 3 */
 	-webkit-text-size-adjust: 100%; /* 3 */
+	overflow-y: scroll;
+	box-sizing: border-box;
 }
 
 /* Sections
